--- a/types/package.json
+++ b/types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nepoche/protocol-substrate-types",
-  "version": "0.0.11-1",
+  "version": "0.0.11",
   "description": "Polkadot.js type definitions required for interacting with Webb's substrate protocol",
   "main": "./build/index.js",
   "author": "Webb Developers <drew@webb.tools>",
