--- a/.github/workflows/publish-types.yaml
+++ b/.github/workflows/publish-types.yaml
@@ -8,10 +8,11 @@ on:
     branches:
     - main
     paths:
-    - types/src
+    - types
 
 jobs:
   build: 
+  strategy:
     runs-on: ubuntu-latest
     permissions:
       packages: write
@@ -20,9 +21,15 @@ jobs:
       - uses: actions/checkout@v2
       - name: Change into types package
         run: cd types
+      - name: Use Node.js 16.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 16.x
+      - name: Install npm dependencies
+        run: yarn install
       - name: Run a build
         run: yarn build
       - name: Do a patch update for the package
         run: yarn --version patch
       - name: Publish the package
-        run: npm publish --access public
+        run: yarn publish-types
