--- a/.github/workflows/publish-types.yml
+++ b/.github/workflows/publish-types.yml
@@ -14,6 +14,7 @@ jobs:
   build:
     name: Publish Types
     runs-on: ubuntu-latest
+    working-directory: types
     permissions:
       packages: write
       contents: read
