--- a/.github/workflows/publish-types.yml
+++ b/.github/workflows/publish-types.yml
@@ -14,23 +14,20 @@ jobs:
   build:
     name: Publish Types
     runs-on: ubuntu-latest
-    working-directory: types
     permissions:
       packages: write
       contents: read
     steps:
       - uses: actions/checkout@v2
-      - name: Change into types package
-        run: cd types
       - name: Use Node.js 16.x
         uses: actions/setup-node@v1
         with:
           node-version: 16.x
       - name: Install npm dependencies
-        run: yarn install
+        run: cd types && yarn install
       - name: Run a build
-        run: yarn build
+        run: cd types && yarn build
       - name: Do a patch update for the package
-        run: yarn --version patch
+        run: cd types && yarn --version patch
       - name: Publish the package
-        run: yarn publish-types
+        run: cd types && yarn publish-types
