--- a/.github/workflows/publish-types.yml
+++ b/.github/workflows/publish-types.yml
@@ -18,7 +18,9 @@ jobs:
       packages: write
       contents: read
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: Use Node.js 16.x
         uses: actions/setup-node@v1
         with:
