--- a/.github/workflows/publish-types.yml
+++ b/.github/workflows/publish-types.yml
@@ -21,10 +21,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Use Node.js 16.x
-        uses: actions/setup-node@v1
+      - uses: actions/setup-node@v3
         with:
-          node-version: 16.x
+          node-version: '16.x'
+          registry-url: 'https://registry.npmjs.org'
       - name: Install npm dependencies
         run: cd types && yarn install
       - name: Run a build
@@ -33,3 +33,5 @@ jobs:
         run: cd types && yarn --version patch
       - name: Publish the package
         run: cd types && yarn publish-types
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
