--- a/.github/workflows/publish-types.yml
+++ b/.github/workflows/publish-types.yml
@@ -21,6 +21,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+        run: git checkout main
       - uses: actions/setup-node@v3
         with:
           node-version: '16.x'
@@ -41,3 +42,6 @@ jobs:
         run: cd types && yarn publish-types
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - uses: EndBug/add-and-commit@v9
+        with:
+          default_author: github_actions
