--- a/.github/workflows/publish-types.yml
+++ b/.github/workflows/publish-types.yml
@@ -42,6 +42,7 @@ jobs:
         run: cd types && yarn publish-types
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-      - uses: EndBug/add-and-commit@v9
+      - name: Commit & Push changes
+        uses: actions-js/push@master
         with:
-          default_author: github_actions
+          github_token: ${{ secrets.GITHUB_TOKEN }}
