--- a/.github/workflows/publish-types.yml
+++ b/.github/workflows/publish-types.yml
@@ -40,6 +40,6 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Commit & Push changes
-        uses: actions-js/push@main
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git commit -am "Update protocol-substrate-types"
+          git push
